# DeFiMomentumFund

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: logic_diagrams.md  manual_trading_fund_design.md  overview_en.md  overview_ko.md  update_transaction_history.md  vault_spec_ko.md
src/defi_fund/: accounting.py  main.py  oracle.py  state.py  txlog.py
src/defi_fund/cli/: app.py
src/defi_fund/config/: settings.py
src/defi_fund/contracts/: Vault.sol  __init__.py
src/defi_fund/web/: admin.py  frontend.py
src/defi_fund/web/static/: index.html
tests/: test_accounting.py  test_basic.py  test_cli_flow.py  test_full_cycle.py
